# app/Http/Controllers/Controller.php
@@ -4,16 +4,16 @@ namespace App\Http\Controllers;
 
 /**
  * @OA\Info(
- * title="Swagger with Laravel",
- * version="1.0.0",
- * )
+ *     title="Otsuka API",
+ *     version="1.0.0"
+ * ),
  * @OA\SecurityScheme(
- * type="http",
- * securityScheme="bearerAuth",
- * scheme="bearer",
- * bearerFormat="JWT"
+ *     securityScheme="api_auth",
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     description="Enter your JWT token in the format **Bearer &lt;token&gt;**"
  * )
  */
-abstract class Controller
-{
-}
+
+abstract class Controller {}
